syntax = "proto3";
package index.ask.rpc;

option go_package = "github.com/textileio/powergate/index/ask/rpc";

message Query {
    uint64 max_price = 1;
	uint64 piece_size = 2;
	int32 limit = 3;
	int32 offset = 4;
}

message StorageAsk {
	uint64 price = 1;
	uint64 min_piece_size = 2;
	string miner = 3;
	int64 timestamp = 4;
	int64 expiry = 5;
}

message Index {
    int64 last_updated = 1;
    uint64 storage_median_price = 2;
    map<string, StorageAsk> storage = 3;
}

message GetRequest {
}

message GetResponse {
    Index index = 1;
}

message QueryRequest {
    Query query = 1;
}

message QueryResponse {
    repeated StorageAsk asks = 1;
}

service RPCService {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Query(QueryRequest) returns (QueryResponse) {}
}
